# NOVOMATIC-Interview-Exercises-2025

./: .gitignore  CMakeLists.txt  README.md
exercises/exercise1/: CMakeLists.txt  main.cpp  test_trie.cpp  trie.cpp  trie.h
exercises/exercise1/include/: Trie.h
exercises/exercise1/src/: Trie.cpp
exercises/exercise1/tests/: test_trie.cpp
exercises/exercise2/: CMakeLists.txt  main.cpp  test_collision.cpp  triangle.cpp  triangle.h  visualization.cpp  visualization.h
exercises/exercise2/include/: triangle.h  visualization.h
exercises/exercise2/src/: main.cpp  visualization.cpp
exercises/exercise2/tests/: test_collision.cpp
exercises/exercise3/: CMakeLists.txt  calculate.h  main.cpp  test_calculate.cpp
